# TDD_store_api_FastApi

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
store/: main.py
store/core/: config.py
store/db/: mongo.py
store/schemas/: product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
